plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.10'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '6.25.0'
    id 'checkstyle'
    id 'jacoco'
}

group = 'Momzzang-Seven'
version = '0.0.1-SNAPSHOT'
description = 'MZTK-BE'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus' 
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.hibernate.orm:hibernate-spatial'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation platform('org.springframework.ai:spring-ai-bom:1.1.2')
    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
    // JDBC connection/query span (datasource-micrometer) — Spring Boot 3.x 는 1.x 라인
    implementation 'net.ttddyy.observation:datasource-micrometer-spring-boot:1.4.1'

    // QueryDSL 설정
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    // Environment Configuration
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // API Documentation
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Utilities
    implementation 'org.apache.commons:commons-lang3:3.18.0'
    implementation 'com.drewnoakes:metadata-extractor:2.19.0'
    implementation 'net.coobird:thumbnailator:0.4.20'
    implementation 'dev.matrixlab.webp4j:webp4j-core:2.1.1'
    implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'

    // Web3
    implementation 'org.web3j:core:5.0.2'

    // Database
    runtimeOnly 'org.postgresql:postgresql'

    // Flyway (Database Migration)
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // Development
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'io.rest-assured:rest-assured:5.3.0'
    testImplementation 'io.rest-assured:json-path:5.3.0'
    testRuntimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Rate limiting
    implementation 'com.bucket4j:bucket4j-core:8.10.1'

    // In-memory caching (managed by Spring Boot BOM)
    implementation 'com.github.ben-manes.caffeine:caffeine'

    // AWS
    implementation platform('software.amazon.awssdk:bom:2.27.21')
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:secretsmanager'
    implementation 'software.amazon.awssdk:kms'
}

spotless {
    java {
        googleJavaFormat()
        target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
    }
}

checkstyle {
    toolVersion = '10.17.0'
    configFile = file("config/checkstyle/google_checks.xml")
}

jacoco {
    toolVersion = '0.8.12'
}

// 기본 test 태스크에서 @Tag("e2e") 태그가 붙은 테스트는 제외.
// ./gradlew test 실행 시 e2e테스트는 실행되지 않음.
tasks.named('test') {
    maxHeapSize = '2048m'
    systemProperty 'spring.test.context.cache.maxSize',
            System.getProperty('spring.test.context.cache.maxSize', '8')
    useJUnitPlatform {
        excludeTags 'e2e'
    }
    finalizedBy tasks.named('jacocoTestReport')
}

tasks.named('jacocoTestReport') {
    dependsOn tasks.named('test')
    reports {
        html.required = true
        xml.required = true
        csv.required = false
    }
}

// e2e테스트를 수행하기 위해서는 ./gradlew e2eTest 명령어를 실행해야함.
// ./gradlew test e2eTest 수행 시 기본 test 동작 이후에 e2e테스트가 실행됨.
tasks.register('e2eTest', Test) {
    description = 'Runs @Tag("e2e") integration tests against a real PostgreSQL instance.'
    group = 'verification'
    maxHeapSize = '2048m'
    systemProperty 'spring.test.context.cache.maxSize',
            System.getProperty('spring.test.context.cache.maxSize', '8')
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform {
        includeTags 'e2e'
    }
    shouldRunAfter 'test'
}

tasks.named('check') {
    dependsOn "spotlessCheck"
    dependsOn "checkstyleMain"
    dependsOn "checkstyleTest"
}
